branch-31 #comment css design changes, alignment issues fixes, wishlist page and routes created

--- a/frontend/src/style/footer.css
+++ b/frontend/src/style/footer.css
@@ -102,9 +102,9 @@ footer { background-color:#0c1a1e; min-height:350px; font-family: 'Open Sans', s
 .checkout-cart-toast{
     width: 100%;
     border-radius: 8px;
-    border: 1px solid #000000;
-    background: #ff6363;
-    color: white;
+    border: 2px solid #000000;
+    background: #ffebe6;
+    color: #000000;
     font-weight: 600;
     padding: 9px 10px 8px !important;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.05); 
