--- a/frontend/src/style/home.css
+++ b/frontend/src/style/home.css
@@ -1,5 +1,6 @@
 .main-content{
     /* margin-top: 10px; */
+    min-height: calc( 100vh - 80px )
 }
 .carousel-item-style{
     max-height: 500px;
@@ -50,11 +51,22 @@
     width: 100%;
 }
 
+.food-category-container{
+    border-radius: 0px 0px 15px 15px;
+}
 .food-category-section{
     display: flex;
     flex-wrap: nowrap;
     gap: 80px;
     justify-content:center;
+    background: linear-gradient(45deg, #9fe9ff, #ffb2ff);
+    padding-top: 15px;
+    border-radius: 4px 4px 15px 15px;
+    padding-left: 12px;
+    padding-right: 12px;
+}
+.food-category-section h5{
+    font-size: 18px;
 }
 
 .border-rounded{
@@ -118,7 +130,7 @@
     padding: 10px;
 }
 .see-more-section{
-    margin-top: 10px;
+    margin-top: 18px;
 }
 .see-more-section a{
     background-color: darkorange;
@@ -225,6 +237,17 @@
     .custom-card-width-home{
         flex: 40%;
     }
+    .food-category-section{
+        gap: 30px;
+    }
+}
+@media(max-width:649.98px){
+    .food-category-section{
+        gap: 20px;
+    }
+    .food-category-section h5{
+        font-size: 20px;
+    }
 }
 @media(max-width:623.98px){
     .food-card-section{
@@ -237,6 +260,9 @@
     .fav-cat-item-list{
         flex-wrap: wrap;
     }
+    .food-category-section h5{
+        font-size: 18px;
+    }
 }
 @media (max-width:499.98px) {
     .food-category-section{
@@ -245,6 +271,12 @@
     }
     .gradient-bg{
         font-size: 22px;
+    }
+    .food-category-section{
+        gap: 15px;
+    }
+    .food-category-section h5{
+        font-size: 18px;
     }
 }
 @media(max-width:423.98px){
